@@ -2,7 +2,6 @@ AUX zsnes-1.51-FORTIFY_SOURCE.patch 3373 RMD160 6c1913d5dbdfa7c52f755d8f320cf85c
 AUX zsnes-1.51-archopt-july-23-update.patch 12740 RMD160 e8004f97f795c13d51fa16c5bf386dfc8b12058f SHA1 4e59c16f0e5c57cfa6e5df2b50026598e77eab5a SHA256 4fc49ccafe46dafb1db57226e6989f6a5c97e826595df881d90bad1694a9906e
 AUX zsnes-1.51-libpng.patch 974 RMD160 36bdb059c6641376bee6ea5040a7045420c02870 SHA1 a4f7960de8eece5ac1c51cc8b58f6fb8964bca40 SHA256 9e5ba014ba847f7e10075dfd51b0ca42b86aa2dcc47952d569c304f3e8e15470
 DIST zsnes151bsrc.tar.bz2 1430988 RMD160 f47b26f080032ad47f9cc16d12151d7b930941e1 SHA1 9a9f6fbab738132069f491d739658afb1263d8d5 SHA256 8c495dae6f4f5bfb7461cc336cd0b5dcb097d68d16aed6d776357ec953ba2a5c
-EBUILD zsnes-1.51b-r1.ebuild 2128 RMD160 d91b3ec197e68bf6a161c4a34a19b39426bce0a1 SHA1 7a70f178967be9729e143631ff511072ddd40cd9 SHA256 45fbf344ff2c654bbb92653be0394ed259be3fefa3f4859ceb6ec8ac3cb1a1c9
-EBUILD zsnes-1.51b.ebuild 2072 RMD160 a238f13f1ac8ddbf80c70dbaa8d2263199ff6ab2 SHA1 8b6c0e6e5b0ff829faf0d98fa5c831d58caab2c7 SHA256 27efd895e74730a3986155298543d9593ad9b053417911880b31653c8bd7e0b7
-MISC ChangeLog 682 RMD160 8a442924170a7056fb4ebe2bb511e5333c11a673 SHA1 88da07ececc625a1c405dd8ac4961f8fd656f870 SHA256 cf2ae68a970bc83421e88ecb7152bab9ca3ea43107551ce965baca879857072f
-MISC metadata.xml 397 RMD160 295033a28c39c0275974843c81de1b175462d4e0 SHA1 954cd174236d0154e4f6424c078c568e9ad6f0ac SHA256 b0e7841ea448d98471444dbae8898928d0dcf8802a6e65778269b7fa0a621257
+EBUILD zsnes-1.51b-r1.ebuild 1994 RMD160 979f30cf086f739569009c11d595415902e3265d SHA1 bc2331f6d05ad0717a4dd957a56dcd4679ee95ff SHA256 c131aab0b193e184eb61d015ff00f891e7d6b3486a9c034c4f80369e6e9e5785
+MISC ChangeLog 965 RMD160 7e40b908cf3f9c6e09b7156fceaf9a2237557121 SHA1 24f887819a9c978ac359a03735b8bfff3adf9083 SHA256 a21b252a8c1fbb8b9e84751353ebeb6d35a7a5c6cc5015097dc2d1c6ef5e2201
+MISC metadata.xml 322 RMD160 bed03610d068fa44cd7c7118a3b877bf07ed7502 SHA1 02e37e5acd61a0f0a8590739aba1a02064cc999f SHA256 42c106ab3aa78d845163200c063abfb62779ca22e14fb6d9d3cd2ffec58b6dc5
