@@ -2,6 +2,8 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/games-emulation/zsnes/zsnes-1.51-r1.ebuild,v 1.4 2007/12/04 05:08:45 vapier Exp $
 
+EAPI=2
+
 inherit eutils autotools flag-o-matic toolchain-funcs games
 
 DESCRIPTION="SNES (Super Nintendo) emulator that uses x86 assembly"
@@ -11,9 +13,9 @@ SRC_URI="http://zsnes.sf.net/${PN}${PV//./}src.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="-* amd64 x86 ~x86-fbsd"
-IUSE="ao custom-cflags experimental opengl png"
+IUSE="ao experimental opengl png"
 
-RDEPEND="media-libs/libsdl
+RDEPEND="media-libs/libsdl[joystick]
 	>=sys-libs/zlib-1.2.3-r1
 	amd64? ( >=app-emulation/emul-linux-x86-sdl-10.1 )
 	ao? ( media-libs/libao )
@@ -25,19 +27,13 @@ DEPEND="${RDEPEND}
 
 S=${WORKDIR}/${PN}_${PV//./_}/src
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
+src_prepare() {
 	# Remove hardcoded CFLAGS and LDFLAGS
-	if use custom-cflags; then
-		sed -i -e '/^\s*CFLAGS=.* -fomit-frame-pointer /d' \
-			configure.in || die
-		append-flags -fomit-frame-pointer
-		use experimental || -D__RELEASE__
-	else
-		strip-flags
-	fi
+	sed -i -e '/^\s*CFLAGS=.* -fomit-frame-pointer /d' \
+		configure.in || die
+	append-flags -fomit-frame-pointer
+	use experimental || -D__RELEASE__
+
 	sed -i \
 		-e 's:^\s*STRIP="-s":STRIP="":'	\
 		-e 's:^\s*CFLAGS=.* -I\/usr\/local\/include .*$:CFLAGS="${CFLAGS} -I.":'	\
@@ -50,13 +46,12 @@ src_unpack() {
 	eautoreconf
 }
 
-src_compile() {
+src_configure() {
 	tc-export CC
 
 	use amd64 && multilib_toolchain_setup x86
 
-	local myconf=""
-	use custom-cflags && myconf="--disable-cpucheck force_arch=no"
+	local myconf="--disable-cpucheck force_arch=no"
 	use experimental || myconf="${myconf} --enable-release"
 
 	egamesconf \
@@ -66,7 +61,6 @@ src_compile() {
 		--disable-debug \
 		${myconf} \
 		|| die
-	emake || die "emake failed"
 }
 
 src_install() {
