@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Jun 2009; Michał Ziąbkowski <mziab@o2.pl> -zsnes-1.51b.ebuild,
+  zsnes-1.51b-r1.ebuild, metadata.xml:
+  Ported to EAPI=2. Require libsdl[joystick]. Force custom-cflags, cpucheck
+  causes many weird quirks here. Remove custom-cflags from metadata.xml. Purge
+  older revision.
+
   20 Apr 2009; Michał Ziąbkowski <mziab@o2.pl> -zsnes-1.51-r2.ebuild:
   Removed cruft.
 
